--- a/PrM_DataPrep_Daany.DataFrame.ipynb
+++ b/PrM_DataPrep_Daany.DataFrame.ipynb
@@ -1836,7 +1836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the next part, we are going to implement the training and evaluation process of the Predictive Maintenance model. The full notebook for this blog post can be found [here](https://github.com/bhrnjica/notebooks)"
+    "In the next part, we are going to implement the training and evaluation process of the Predictive Maintenance model."
    ]
   },
   {
