--- a/notebooks/Daany Tutorials/Daany Developer Guide Part 1 - Foundations.ipynb
+++ b/notebooks/Daany Tutorials/Daany Developer Guide Part 1 - Foundations.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Try all the notebooks in this repo by using [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/bhrnjica/notebooks/master)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
