--- a/notebooks/Daany Tutorials/Daany_DevGuide_Part_Foundations.ipynb
+++ b/notebooks/Daany Tutorials/Daany_DevGuide_Part_Foundations.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Try all the notebooks in this repo by using [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/bhrnjica/notebooks/master)"
+    "Try the notebook by using [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/bhrnjica/notebooks/master)"
    ]
   },
   {
