update Daany notebooks to reflect the Daany 1.1.0

--- a/notebooks/CAMPUS02-IntDays-DataScience_using_Jupyter_Notebook.ipynb
+++ b/notebooks/CAMPUS02-IntDays-DataScience_using_Jupyter_Notebook.ipynb
@@ -325,10 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
+    "dotnet_interactive": {
+     "language": "csharp"
     }
    },
    "outputs": [
@@ -482,10 +482,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
+    "dotnet_interactive": {
+     "language": "csharp"
     }
    },
    "outputs": [
@@ -563,14 +563,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   }
