--- a/notebooks/CAMPUS02_Iris_Research_Project_Dataset.ipynb
+++ b/notebooks/CAMPUS02_Iris_Research_Project_Dataset.ipynb
@@ -78,35 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Installed package Daany.Stat version 0.6.4"
-      ]
+      "application/x.notebook.error-traceback": {
+       "ename": "Error",
+       "evalue": "System.OperationCanceledException: Command :SubmitCode: //Install Daany packages\n#r \"nuget:Daany.DataFrame ... cancelled.",
+       "traceback": []
+      }
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Installed package Daany.DataFrame.Ext version 0.6.4"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Installed package Daany.DataFrame version 0.6.4"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "unknown"
     }
    ],
    "source": [
@@ -118,9 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/x.notebook.error-traceback": {
+       "ename": "Error",
+       "evalue": "(2,7): error CS0246: The type or namespace name 'Daany' could not be found (are you missing a using directive or an assembly reference?)\r\n(3,7): error CS0246: The type or namespace name 'Daany' could not be found (are you missing a using directive or an assembly reference?)\r\n(4,7): error CS0246: The type or namespace name 'Daany' could not be found (are you missing a using directive or an assembly reference?)\r\n(7,7): error CS0246: The type or namespace name 'XPlot' could not be found (are you missing a using directive or an assembly reference?)\r\n(16,17): error CS0234: The type or namespace name 'ML' does not exist in the namespace 'Microsoft' (are you missing an assembly reference?)\r\n(17,17): error CS0234: The type or namespace name 'ML' does not exist in the namespace 'Microsoft' (are you missing an assembly reference?)\r\n(18,17): error CS0234: The type or namespace name 'ML' does not exist in the namespace 'Microsoft' (are you missing an assembly reference?)",
+       "traceback": []
+      }
+     },
+     "output_type": "unknown"
+    }
+   ],
    "source": [
     "//using statement of Daany package\n",
     "using Daany;\n",
@@ -144,8 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -271,8 +277,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//declare iris class type\n",
@@ -288,8 +298,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "// Temporal DataFrame formatter for this early preview\n",
@@ -329,8 +343,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -354,9 +372,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
    },
    "outputs": [
     {
@@ -386,8 +406,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -407,8 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -429,8 +457,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -478,8 +510,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -546,8 +582,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var mlContext= new MLContext();\n",
@@ -567,8 +607,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//Split dataset in two parts: TrainingDataset (80%) and TestDataset (20%)\n",
@@ -579,8 +623,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//one encoding output category column by defining KeyValues for each category\n",
@@ -593,8 +641,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     " // Define LightGbm algorithm estimator\n",
@@ -605,8 +657,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -650,8 +706,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -702,8 +762,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -732,8 +796,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -753,7 +821,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   }
