--- a/notebooks/PrM_DataPrep_Daany.DataFrame.ipynb
+++ b/notebooks/PrM_DataPrep_Daany.DataFrame.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -209,8 +213,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//using Microsoft.ML.Data;\n",
@@ -231,8 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//DataFrame formatter\n",
@@ -283,8 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//URL Paths for the data files used in the Notebook\n",
@@ -297,8 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//check if the file exists\n",
@@ -315,8 +335,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -343,8 +367,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -371,8 +399,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -399,8 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -446,8 +482,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -472,8 +512,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -548,8 +592,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -575,8 +623,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -602,8 +654,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//define filters columns (two dates columns)\n",
@@ -653,8 +709,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "errors.Head()"
@@ -662,8 +722,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//count number of errors \n",
@@ -702,8 +766,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "maint.Head()"
@@ -711,8 +779,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//count number of errors \n",
@@ -751,8 +823,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "machines.Head()"
@@ -760,8 +836,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//count number of errors \n",
@@ -791,8 +871,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//Distribution of models across age\n",
@@ -835,8 +919,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "failures.Head()"
@@ -844,8 +932,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//count number of failures  \n",
@@ -895,8 +987,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//prepare rolling aggregation for each column for average values\n",
@@ -921,8 +1017,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//group Telemetry data by machine ID\n",
@@ -931,8 +1031,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//calculate rolling mean for grouped data for each 3 hours\n",
@@ -945,8 +1049,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "_3AvgValue.Tail()"
@@ -954,8 +1062,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//calculate rolling std for grouped datat fro each 3 hours\n",
@@ -975,8 +1087,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//calculate rolling avg and std for each 24 hours\n",
@@ -1001,8 +1117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//before merge all features create set of features from the current values for every 3 or 24 hours\n",
@@ -1013,8 +1133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//merge all telemetry data frames into one\n",
@@ -1030,8 +1154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//select final dataset for the telemetry\n",
@@ -1047,8 +1175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "telemetry_final.Head()"
@@ -1067,8 +1199,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var mlContext = new MLContext(seed:2019);\n",
@@ -1095,8 +1231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "// align errors with telemetry datetime values so that we can calculate aggregations\n",
@@ -1110,8 +1250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//count the number of errors of different types in the last 24 hours, for every 3 hours\n",
@@ -1154,8 +1298,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//One Hot Encoding of error column\n",
@@ -1165,8 +1313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//create separate data frames in order to calculate proper time since last replacement \n",
@@ -1180,8 +1332,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//from telemetry data create helped dataframe so we can calculate additional column from the maintenance data frame\n",
@@ -1190,8 +1346,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1225,8 +1385,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var maintenance_final = compData;\n",
@@ -1244,8 +1408,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "machines.Head()"
@@ -1262,8 +1430,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "var merge2Cols=new string[]{\"machineID\"};\n",
@@ -1274,8 +1446,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "features_final= features_final[\"datetime\", \"machineID\", \n",
@@ -1314,8 +1490,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "failures.Describe(false)"
@@ -1323,8 +1503,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//constructing the label column which indicate if the current machine will \n",
@@ -1405,8 +1589,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//save the file data frame to disk\n",
@@ -1426,8 +1614,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "final_dataframe.Describe(false)"
@@ -1443,21 +1635,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   }
