--- a/notebooks/PrM_MachineLearning.ipynb
+++ b/notebooks/PrM_MachineLearning.ipynb
@@ -2,50 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "Installed package Daany.DataFrame.Ext version 0.6.7"
+      "application/x.notebook.error-traceback": {
+       "ename": "Error",
+       "evalue": "Error executing cell: Error: Unable to find appropriate .NET SDK.",
+       "traceback": []
+      }
      },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Installed package Daany.Stat version 0.6.7"
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Installed package Microsoft.ML version 1.5.2"
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Installed package Daany.DataFrame version 0.6.7"
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Installed package Microsoft.ML.LightGbm version 1.5.2"
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Installed package XPlot.Plotly version 3.0.1"
-     },
-     "metadata": {}
+     "output_type": "unknown"
     }
    ],
    "source": [
@@ -116,8 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//using Microsoft.ML.Data;\n",
@@ -182,8 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "class PrMaintenancePrediction\n",
@@ -235,8 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "MLContext mlContext= new MLContext(seed:88888);\n",
@@ -251,8 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -271,8 +259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -298,8 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//Load daany:DataFrame into ML.NET pipeline\n",
@@ -350,8 +346,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//Split dataset in two parts: TrainingDataset  and TestDataset          \n",
@@ -368,8 +368,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "public static IEstimator<ITransformer> PrepareData(MLContext mlContext)\n",
@@ -413,8 +417,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//train method\n",
@@ -457,8 +465,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//prepare data transformation pipeline\n",
@@ -471,8 +483,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//train the model\n",
@@ -495,8 +511,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "//evaluate train set\n",
@@ -506,8 +526,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -564,8 +588,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -620,28 +648,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   }
