--- a/notebooks/Sample_use_of_daany.ipynb
+++ b/notebooks/Sample_use_of_daany.ipynb
@@ -2,52 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "source": [
-    "Console.WriteLine(\"Hello NOtebook Jupyter from .NET\");"
-   ],
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Hello NOtebook Jupyter from .NET\n"
      ]
     }
+   ],
+   "source": [
+    "Console.WriteLine(\"Hello NOtebook Jupyter from .NET\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "source": [
-    "#r \"nuget:Daany.DataFrame\"\n",
-    "#r \"nuget:Daany.DataFrame.Ext\""
-   ],
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/plain": "Installing package Daany.DataFrame.Ext..."
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "display_data",
      "data": {
       "text/plain": "Installing package Daany.DataFrame..."
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
+   ],
+   "source": [
+    "#r \"nuget:Daany.DataFrame\"\n",
+    "#r \"nuget:Daany.DataFrame.Ext\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "source": [],
-   "outputs": []
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
