--- a/notebooks/Daany Tutorials/Your_first_data_analysis_jupyter_daany.ipynb
+++ b/notebooks/Daany Tutorials/Your_first_data_analysis_jupyter_daany.ipynb
@@ -16,80 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "Installing package Daany.DataFrame.....done!"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Successfully added reference to package Daany.DataFrame, version 0.6.1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installing package Daany.DataFrame.Ext........done!"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Successfully added reference to package Daany.DataFrame.Ext, version 0.6.1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installing package Daany.Stat......done!"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Successfully added reference to package Daany.Stat, version 0.6.1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installing package XPlot.Plotly......done!"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Successfully added reference to package XPlot.Plotly, version 3.0.1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-27a6e0a705e9>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-27a6e0a705e9>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    //Nuget package installation\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -103,50 +43,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
-    "//using statement of Daany package\n",
-    "using Daany;\n",
-    "using Daany.MathStuff;\n",
-    "using Daany.Ext;\n",
-    "//PLot support\n",
-    "using XPlot.Plotly;\n",
-    "//custom display imlementation\n",
-    "\n",
-    "// Temporal DataFrame formatter for this early preview\n",
-    "using Microsoft.AspNetCore.Html;\n",
-    "Formatter<DataFrame>.Register((df, writer) =>\n",
-    "{\n",
-    "    var headers = new List<IHtmlContent>();\n",
-    "    headers.Add(th(i($\"({df.Index.Name})\")));\n",
-    "    headers.AddRange(df.Columns.Select(c => (IHtmlContent) th(c)));\n",
-    "    \n",
-    "    //renders the rows\n",
-    "    var rows = new List<List<IHtmlContent>>();\n",
-    "    var take = 20;\n",
-    "    \n",
-    "    //\n",
-    "    for (var i = 0; i < Math.Min(take, df.RowCount()); i++)\n",
-    "    {\n",
-    "        var cells = new List<IHtmlContent>();\n",
-    "        cells.Add(td(df.Index[i]));\n",
-    "        foreach (var obj in df[i])\n",
-    "        {\n",
-    "            cells.Add(td(obj));\n",
-    "        }\n",
-    "        rows.Add(cells);\n",
-    "    }\n",
-    "    \n",
-    "    var t = table(\n",
-    "        thead(\n",
-    "            headers),\n",
-    "        tbody(\n",
-    "            rows.Select(\n",
-    "                r => tr(r))));\n",
-    "    \n",
-    "    writer.Write(t);\n",
+    "//using statement of Daany package\r\n",
+    "using Daany;\r\n",
+    "using Daany.MathStuff;\r\n",
+    "using Daany.Ext;\r\n",
+    "//PLot support\r\n",
+    "using XPlot.Plotly;\r\n",
+    "//custom display imlementation\r\n",
+    "\r\n",
+    "// Temporal DataFrame formatter for this early preview\r\n",
+    "using Microsoft.DotNet.Interactive.Formatting;\r\n",
+    "Formatter<DataFrame>.Register((df, writer) =>\r\n",
+    "{\r\n",
+    "    var headers = new List<IHtmlContent>();\r\n",
+    "    headers.Add(th(i($\"({df.Index.Name})\")));\r\n",
+    "    headers.AddRange(df.Columns.Select(c => (IHtmlContent) th(c)));\r\n",
+    "    \r\n",
+    "    //renders the rows\r\n",
+    "    var rows = new List<List<IHtmlContent>>();\r\n",
+    "    var take = 20;\r\n",
+    "    \r\n",
+    "    //\r\n",
+    "    for (var i = 0; i < Math.Min(take, df.RowCount()); i++)\r\n",
+    "    {\r\n",
+    "        var cells = new List<IHtmlContent>();\r\n",
+    "        cells.Add(td(df.Index[i]));\r\n",
+    "        foreach (var obj in df[i])\r\n",
+    "        {\r\n",
+    "            cells.Add(td(obj));\r\n",
+    "        }\r\n",
+    "        rows.Add(cells);\r\n",
+    "    }\r\n",
+    "    \r\n",
+    "    var t = table(\r\n",
+    "        thead(\r\n",
+    "            headers),\r\n",
+    "        tbody(\r\n",
+    "            rows.Select(\r\n",
+    "                r => tr(r))));\r\n",
+    "    \r\n",
+    "    writer.Write(t);\r\n",
     "}, \"text/html\");"
    ]
   },
@@ -202,8 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -254,8 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -294,8 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -325,8 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -366,8 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -433,8 +397,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -496,8 +464,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -529,23 +501,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
+   "display_name": "Python 3.9.5 64-bit",
+   "name": "python395jvsc74a57bd0ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
   },
   "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
-   "name": "C#",
-   "pygments_lexer": "csharp",
-   "version": "8.0"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
+   }
   }
  },
  "nbformat": 4,
