update notebooks reflected by the new version

--- a/notebooks/PrM_MachineLearning.ipynb
+++ b/notebooks/PrM_MachineLearning.ipynb
@@ -11,26 +11,22 @@
    "outputs": [
     {
      "data": {
-      "application/x.notebook.error-traceback": {
-       "ename": "Error",
-       "evalue": "Error executing cell: Error: Unable to find appropriate .NET SDK.",
-       "traceback": []
-      }
+      "application/x.notebook.error-traceback": "{\"ename\":\"Error\",\"evalue\":\"Error executing cell: Error: Unable to find appropriate .NET SDK.\",\"traceback\":[]}"
      },
      "output_type": "unknown"
     }
    ],
    "source": [
-    "#r \"nuget:Microsoft.ML\"\n",
-    "#r \"nuget:Microsoft.ML.LightGbm\"\n",
-    "    \n",
-    "//Install Daany packages\n",
-    "#r \"nuget:Daany.DataFrame\"\n",
-    "#r \"nuget:Daany.DataFrame.Ext\"\n",
-    "#r \"nuget:Daany.Stat\"\n",
-    "    \n",
-    "//Install XPlot package\n",
-    "#r \"nuget:XPlot.Plotly\""
+    "#r \"nuget:Microsoft.ML,1.5.5\"\r\n",
+    "#r \"nuget:Microsoft.ML.LightGbm,1.5.5\"\r\n",
+    "    \r\n",
+    "//Install Daany packages\r\n",
+    "#r \"nuget:Daany.DataFrame,1.1.0\"\r\n",
+    "#r \"nuget:Daany.DataFrame.Ext,1.1.0\"\r\n",
+    "#r \"nuget:Daany.Stat,1.1.0\"\r\n",
+    "    \r\n",
+    "//Plot capabilities\r\n",
+    "#r \"nuget: XPlot.Plotly.Interactive,4.0.2\""
    ]
   },
   {
@@ -644,50 +640,6 @@
    "source": [
     "We can see, that the model has overall accuracy 99%, and 95% average per class accuracy."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
