--- a/notebooks/Sample_use_of_daany.ipynb
+++ b/notebooks/Sample_use_of_daany.ipynb
@@ -10,11 +10,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello NOtebook Jupyter from .NET\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Hello NOtebook Jupyter from .NET\r\n"
+      ]
+     },
+     "output_type": "unknown"
     }
    ],
    "source": [
@@ -32,22 +33,16 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Installing package Daany.DataFrame.Ext..."
+      "text/html": [
+       "<div><div></div><div><strong>Installed Packages</strong><ul><li><span>Daany.DataFrame, 1.1.0</span></li><li><span>Daany.DataFrame.Ext, 1.1.0</span></li><li><span>fsharp.core, 5.0.2</span></li><li><span>newtonsoft.json, 12.0.3</span></li><li><span>xplot.plotly, 4.0.3</span></li></ul></div><div></div></div>"
+      ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Installing package Daany.DataFrame..."
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "unknown"
     }
    ],
    "source": [
-    "#r \"nuget:Daany.DataFrame\"\n",
-    "#r \"nuget:Daany.DataFrame.Ext\""
+    "#r \"nuget:Daany.DataFrame,1.1.0\"\r\n",
+    "#r \"nuget:Daany.DataFrame.Ext,1.1.0\""
    ]
   },
   {
