--- a/notebooks/CAMPUS02-IntDays-DataScience_using_Jupyter_Notebook.ipynb
+++ b/notebooks/CAMPUS02-IntDays-DataScience_using_Jupyter_Notebook.ipynb
@@ -335,148 +335,60 @@
     {
      "data": {
       "text/html": [
-       "\r\n",
-       "<div>\r\n",
-       "    <div id='dotnet-interactive-this-cell-56512' style='display: none'>\r\n",
-       "        The below script needs to be able to find the current output cell; this is an easy method to get it.\r\n",
-       "    </div>\r\n",
-       "    <script type='text/javascript'>\r\n",
-       "// ensure `requirejs` is available globally\r\n",
-       "if (typeof requirejs !== typeof Function || typeof requirejs.config !== typeof Function) {\r\n",
-       "    let requirejs_script = document.createElement('script');\r\n",
-       "    requirejs_script.setAttribute('src', 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js');\r\n",
-       "    requirejs_script.setAttribute('type', 'text/javascript');\r\n",
-       "    requirejs_script.onload = function () {\r\n",
-       "        loadDotnetInteractiveApi();\r\n",
-       "    };\r\n",
-       "\r\n",
-       "    document.getElementsByTagName('head')[0].appendChild(requirejs_script);\r\n",
-       "}\r\n",
-       "else {\r\n",
-       "    loadDotnetInteractiveApi();\r\n",
-       "}\r\n",
-       "\r\n",
-       "async function probeAddresses(probingAddresses) {\r\n",
-       "    if (Array.isArray(probingAddresses)) {\r\n",
-       "        for (let i = 0; i < probingAddresses.length; i++) {\r\n",
-       "            \r\n",
-       "            let rootUrl = probingAddresses[i];\r\n",
-       "\r\n",
-       "            if (!rootUrl.endsWith('/')) {\r\n",
-       "                rootUrl = `${rootUrl}/`;\r\n",
-       "            }\r\n",
-       "\r\n",
-       "            let response = await fetch(`${rootUrl}discovery`, {\r\n",
-       "                method: 'POST',\r\n",
-       "                headers: {\r\n",
-       "                    'Content-Type': 'text/plain'\r\n",
-       "                },\r\n",
-       "                body: probingAddresses[i]\r\n",
-       "            });\r\n",
-       "\r\n",
-       "            if (response.status == 200) {\r\n",
-       "                return rootUrl;\r\n",
-       "            }\r\n",
-       "        }\r\n",
-       "    }\r\n",
-       "}\r\n",
-       "\r\n",
-       "function loadDotnetInteractiveApi() {\r\n",
-       "    probeAddresses([\"http://192.168.0.11:56512/\", \"http://192.168.56.1:56512/\"])\r\n",
-       "        .then((root) => {\r\n",
-       "            // use probing to find host url and api resources\r\n",
-       "            // load interactive helpers and language services\r\n",
-       "            let dotnet_require = requirejs.config({\r\n",
-       "                context: '23780.56512',\r\n",
-       "                paths: {\r\n",
-       "                    'dotnet-interactive': `${root}resources`\r\n",
-       "                }\r\n",
-       "            });\r\n",
-       "            if (!window.dotnet_require) {\r\n",
-       "                window.dotnet_require = dotnet_require;\r\n",
-       "            }\r\n",
-       "        \r\n",
-       "            dotnet_require([\r\n",
-       "                    'dotnet-interactive/dotnet-interactive',\r\n",
-       "                    'dotnet-interactive/lsp',\r\n",
-       "                    'dotnet-interactive/editor-detection'\r\n",
-       "                ],\r\n",
-       "                function (dotnet, lsp, editor) {\r\n",
-       "                    dotnet.init(window);\r\n",
-       "                    \r\n",
-       "                },\r\n",
-       "                function (error) {\r\n",
-       "                    console.log(error);\r\n",
-       "                }\r\n",
-       "            );\r\n",
-       "        })\r\n",
-       "        .catch(error => {console.log(error);});\r\n",
-       "    }\r\n",
-       "    </script>\r\n",
-       "</div>"
+       "<div><div></div><div><strong>Installed Packages</strong><ul><li><span>fsharp.core, 5.0.0</span></li><li><span>giraffe.viewengine, 1.2.0</span></li><li><span>humanizer.core, 2.2.0</span></li><li><span>markdig.signed, 0.21.1</span></li><li><span>microsoft.applicationinsights, 2.17.0</span></li><li><span>microsoft.applicationinsights.aspnetcore, 2.17.0</span></li><li><span>microsoft.applicationinsights.dependencycollector, 2.17.0</span></li><li><span>microsoft.applicationinsights.eventcountercollector, 2.17.0</span></li><li><span>microsoft.applicationinsights.perfcountercollector, 2.17.0</span></li><li><span>microsoft.applicationinsights.windowsserver, 2.17.0</span></li><li><span>microsoft.applicationinsights.windowsserver.telemetrychannel, 2.17.0</span></li><li><span>microsoft.aspnetcore.http.connections.client, 3.1.8</span></li><li><span>microsoft.aspnetcore.signalr.client, 3.1.8</span></li><li><span>microsoft.aspnetcore.signalr.client.core, 3.1.8</span></li><li><span>microsoft.bcl.asyncinterfaces, 5.0.0</span></li><li><span>microsoft.codeanalysis.common, 3.9.0</span></li><li><span>microsoft.codeanalysis.csharp, 3.9.0</span></li><li><span>microsoft.codeanalysis.csharp.workspaces, 3.9.0</span></li><li><span>microsoft.codeanalysis.visualbasic, 3.9.0</span></li><li><span>microsoft.codeanalysis.visualbasic.workspaces, 3.9.0</span></li><li><span>microsoft.codeanalysis.workspaces.common, 3.9.0</span></li><li><span>microsoft.dotnet.interactive, 1.0.0-beta.21228.1</span></li><li><span>microsoft.dotnet.interactive.formatting, 1.0.0-beta.21228.1</span></li><li><span>microsoft.dotnet.interactive.http, 1.0.0-beta.21228.1</span></li><li><span>microsoft.dotnet.interactive.powershell, 1.0.0-beta.21228.1</span></li><li><span>microsoft.extensions.logging.applicationinsights, 2.17.0</span></li><li><span>microsoft.management.infrastructure.cimcmdlets, 7.1.3</span></li><li><span>microsoft.powershell.commands.diagnostics, 7.1.3</span></li><li><span>microsoft.powershell.commands.management, 7.1.3</span></li><li><span>microsoft.powershell.commands.utility, 7.1.3</span></li><li><span>microsoft.powershell.consolehost, 7.1.3</span></li><li><span>microsoft.powershell.coreclr.eventing, 7.1.3</span></li><li><span>microsoft.powershell.markdownrender, 7.1.3</span></li><li><span>microsoft.powershell.native, 7.1.0</span></li><li><span>microsoft.powershell.sdk, 7.1.3</span></li><li><span>microsoft.powershell.security, 7.1.3</span></li><li><span>microsoft.win32.registry.accesscontrol, 5.0.0</span></li><li><span>microsoft.wsman.management, 7.1.3</span></li><li><span>microsoft.wsman.runtime, 7.1.3</span></li><li><span>namotion.reflection, 1.0.14</span></li><li><span>newtonsoft.json, 12.0.3</span></li><li><span>njsonschema, 10.2.2</span></li><li><span>runtime.win-x64.runtime.native.system.data.sqlclient.sni, 4.4.0</span></li><li><span>system.codedom, 5.0.0</span></li><li><span>system.commandline, 2.0.0-beta1.21216.1</span></li><li><span>system.commandline.rendering, 0.3.0-alpha.20427.1</span></li><li><span>system.componentmodel.composition, 5.0.0</span></li><li><span>system.componentmodel.composition.registration, 5.0.0</span></li><li><span>system.composition.attributedmodel, 1.0.31</span></li><li><span>system.composition.convention, 1.0.31</span></li><li><span>system.composition.hosting, 1.0.31</span></li><li><span>system.composition.runtime, 1.0.31</span></li><li><span>system.composition.typedparts, 1.0.31</span></li><li><span>system.configuration.configurationmanager, 5.0.0</span></li><li><span>system.data.odbc, 5.0.0</span></li><li><span>system.data.oledb, 5.0.0</span></li><li><span>system.data.sqlclient, 4.8.2</span></li><li><span>system.diagnostics.eventlog, 5.0.1</span></li><li><span>system.diagnostics.performancecounter, 5.0.0</span></li><li><span>system.directoryservices, 5.0.0</span></li><li><span>system.directoryservices.accountmanagement, 5.0.0</span></li><li><span>system.directoryservices.protocols, 5.0.0</span></li><li><span>system.drawing.common, 5.0.2</span></li><li><span>system.io.packaging, 5.0.0</span></li><li><span>system.io.ports, 5.0.0</span></li><li><span>system.management, 5.0.0</span></li><li><span>system.management.automation, 7.1.3</span></li><li><span>system.net.http.winhttphandler, 5.0.0</span></li><li><span>system.private.servicemodel, 4.7.0</span></li><li><span>system.reactive, 5.0.0</span></li><li><span>system.reflection.context, 5.0.0</span></li><li><span>system.runtime.caching, 5.0.0</span></li><li><span>system.security.cryptography.pkcs, 5.0.1</span></li><li><span>system.security.cryptography.protecteddata, 5.0.0</span></li><li><span>system.servicemodel.duplex, 4.7.0</span></li><li><span>system.servicemodel.http, 4.7.0</span></li><li><span>system.servicemodel.nettcp, 4.7.0</span></li><li><span>system.servicemodel.primitives, 4.7.0</span></li><li><span>system.servicemodel.security, 4.7.0</span></li><li><span>system.servicemodel.syndication, 5.0.0</span></li><li><span>system.serviceprocess.servicecontroller, 5.0.0</span></li><li><span>system.text.encodings.web, 5.0.1</span></li><li><span>system.text.json, 5.0.2</span></li><li><span>system.threading.accesscontrol, 5.0.0</span></li><li><span>xplot.plotly, 4.0.2</span></li><li><span>XPlot.Plotly.Interactive, 4.0.2</span></li></ul></div><div></div></div>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "unknown"
     },
     {
      "data": {
-      "text/plain": [
-       "Installed package XPlot.Plotly version 3.0.1"
+      "text/markdown": [
+       "Loading extensions from `XPlot.Plotly.Interactive.dll`"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "unknown"
     },
     {
      "data": {
-      "text/html": [
-       "<div id=\"3c19c7c9-bf37-4027-b67e-d4229b88c0bf\" style=\"width: 600px; height: 400px;\"></div>\r\n",
-       "<script type=\"text/javascript\">\r\n",
-       "\r\n",
-       "var renderPlotly = function() {\r\n",
-       "    var xplotRequire = requirejs.config({context:'xplot-3.0.1',paths:{plotly:'https://cdn.plot.ly/plotly-1.49.2.min'}});\r\n",
-       "    xplotRequire(['plotly'], function(Plotly) {\r\n",
-       "\n",
-       "            var data = [{\"type\":\"scatter\",\"x\":[-20,-19,-18,-17,-16,-15,-14,-13,-12,-11,-10,-9,-8,-7,-6,-5,-4,-3,-2,-1,0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19],\"dx\":2.0,\"y\":[401.0,362.0,325.0,290.0,257.0,226.0,197.0,170.0,145.0,122.0,101.0,82.0,65.0,50.0,37.0,26.0,17.0,10.0,5.0,2.0,1.0,2.0,5.0,10.0,17.0,26.0,37.0,50.0,65.0,82.0,101.0,122.0,145.0,170.0,197.0,226.0,257.0,290.0,325.0,362.0],\"mode\":\"lines\"}];\n",
-       "            var layout = \"\";\n",
-       "            Plotly.newPlot('3c19c7c9-bf37-4027-b67e-d4229b88c0bf', data, layout);\n",
-       "        \r\n",
-       "});\r\n",
-       "};\r\n",
-       "if ((typeof(requirejs) !==  typeof(Function)) || (typeof(requirejs.config) !== typeof(Function))) { \r\n",
-       "    var script = document.createElement(\"script\"); \r\n",
-       "    script.setAttribute(\"src\", \"https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js\"); \r\n",
-       "    script.onload = function(){\r\n",
-       "        renderPlotly();\r\n",
-       "    };\r\n",
-       "    document.getElementsByTagName(\"head\")[0].appendChild(script); \r\n",
-       "}\r\n",
-       "else {\r\n",
-       "    renderPlotly();\r\n",
-       "}\r\n",
-       "</script>\r\n"
+      "text/markdown": [
+       "Configuring PowerShell Kernel for XPlot.Plotly integration."
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "unknown"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Installed support for XPlot.Plotly."
+      ]
+     },
+     "output_type": "unknown"
+    },
+    {
+     "data": {
+      "application/vnd.code.notebook.error": {
+       "message": "(7,28): error CS0246: The type or namespace name 'Graph' could not be found (are you missing a using directive or an assembly reference?)",
+       "name": "Error"
+      }
+     },
+     "output_type": "unknown"
     }
    ],
    "source": [
-    "//Install XPlot package\n",
-    "#r \"nuget:XPlot.Plotly\"\n",
-    "using XPlot.Plotly;\n",
-    "var x= Enumerable.Range(-20, 40);\n",
-    "var y = x.Select(t=>t*t+1.0);\n",
-    "\n",
-    "//create chart\n",
-    "var chart = Chart.Plot(new Graph.Scatter()\n",
-    "                { x = x, y = y, mode = \"lines\", dx=2}\n",
-    ");\n",
-    "chart.Height=400;\n",
-    "chart.Width = 600;\n",
-    "var w = chart.Width;\n",
-    "display(chart)\n",
+    "//Install XPlot package\r\n",
+    "#r \"nuget: XPlot.Plotly.Interactive,4.0.2\"\r\n",
+    "using XPlot.Plotly;\r\n",
+    "var x= Enumerable.Range(-20, 40);\r\n",
+    "var y = x.Select(t=>t*t+1.0);\r\n",
+    "\r\n",
+    "//create chart\r\n",
+    "var chart = Chart.Plot(new Graph.Scatter()\r\n",
+    "                { x = x, y = y, mode = \"lines\", dx=2}\r\n",
+    ");\r\n",
+    "chart.Height=400;\r\n",
+    "chart.Width = 600;\r\n",
+    "var w = chart.Width;\r\n",
+    "display(chart)\r\n",
     "//chart"
    ]
   },
@@ -492,47 +404,54 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"995282d9-70a7-4917-8352-ead4227c91a3\" style=\"width: 600px; height: 400px;\"></div>\r\n",
-       "<script type=\"text/javascript\">\r\n",
-       "\r\n",
-       "var renderPlotly = function() {\r\n",
-       "    var xplotRequire = requirejs.config({context:'xplot-3.0.1',paths:{plotly:'https://cdn.plot.ly/plotly-1.49.2.min'}});\r\n",
-       "    xplotRequire(['plotly'], function(Plotly) {\r\n",
+       "<!DOCTYPE html>\r\n",
+       "<div style=\"width: 600px; height: 400px;\" id=\"31048342-8988-4154-a44c-3e62fa20a83b\"></div><script type=\"text/javascript\">\r\n",
+       "\n",
+       "var renderPlotly = function() {\n",
+       "    var xplotRequire = require.config({context:'xplot-3.0.1',paths:{plotly:'https://cdn.plot.ly/plotly-1.49.2.min'}}) || require;\n",
+       "    xplotRequire(['plotly'], function(Plotly) { \r\n",
        "\n",
        "            var data = [{\"type\":\"histogram\",\"x\":[\"a\",\"b\",\"a\",\"b\",\"b\",\"b\",\"a\",\"b\",\"b\",\"b\",\"a\",\"b\",\"a\",\"b\"],\"name\":\"a\"}];\n",
-       "            var layout = {\"title\":\"Bar plot for data\"};\n",
-       "            Plotly.newPlot('995282d9-70a7-4917-8352-ead4227c91a3', data, layout);\n",
+       "           var layout = \"\";\n",
+       "           Plotly.newPlot('31048342-8988-4154-a44c-3e62fa20a83b', data, layout);\n",
        "        \r\n",
-       "});\r\n",
+       "});\n",
        "};\r\n",
-       "if ((typeof(requirejs) !==  typeof(Function)) || (typeof(requirejs.config) !== typeof(Function))) { \r\n",
-       "    var script = document.createElement(\"script\"); \r\n",
-       "    script.setAttribute(\"src\", \"https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js\"); \r\n",
-       "    script.onload = function(){\r\n",
+       "// ensure `require` is available globally\r\n",
+       "if ((typeof(require) !==  typeof(Function)) || (typeof(require.config) !== typeof(Function))) {\r\n",
+       "    let require_script = document.createElement('script');\r\n",
+       "    require_script.setAttribute('src', 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js');\r\n",
+       "    require_script.setAttribute('type', 'text/javascript');\r\n",
+       "    \r\n",
+       "    \r\n",
+       "    require_script.onload = function() {\r\n",
        "        renderPlotly();\r\n",
        "    };\r\n",
-       "    document.getElementsByTagName(\"head\")[0].appendChild(script); \r\n",
+       "\r\n",
+       "    document.getElementsByTagName('head')[0].appendChild(require_script);\r\n",
        "}\r\n",
        "else {\r\n",
        "    renderPlotly();\r\n",
        "}\r\n",
+       "\r\n",
        "</script>\r\n"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "unknown"
     }
    ],
    "source": [
-    "var xx = new string[] { \"a\", \"b\", \"a\", \"b\", \"b\", \"b\", \"a\", \"b\", \"b\", \"b\", \"a\", \"b\", \"a\", \"b\" };\n",
-    "\n",
-    "var chart = Chart.Plot(new Graph.Histogram() { x = xx });\n",
-    "var layout = new Layout.Layout() { title = \"Bar plot for data\" };\n",
-    "chart.WithLayout(layout);\n",
-    "chart.WithLabels(new string[2]{\"a\",\"b\"});\n",
-    "chart.Height=400;\n",
-    "chart.Width = 600;\n",
-    "display(chart)\n"
+    "//PLot support\r\n",
+    "using XPlot.Plotly;\r\n",
+    "\r\n",
+    "var xx = new string[] { \"a\", \"b\", \"a\", \"b\", \"b\", \"b\", \"a\", \"b\", \"b\", \"b\", \"a\", \"b\", \"a\", \"b\" };\r\n",
+    "\r\n",
+    "var chart = Chart.Plot( new Histogram() { x = xx });\r\n",
+    "\r\n",
+    "chart.WithLabels(new string[2]{\"a\",\"b\"});\r\n",
+    "chart.Height=400;\r\n",
+    "chart.Width = 600;\r\n",
+    "chart\r\n"
    ]
   },
   {
